Flex Fix, this took way too long :\ + shrek spin

--- a/style.css
+++ b/style.css
@@ -2,39 +2,23 @@
   font-family: 'Trebuchet MS';
 }
 
-html {
-  width: 100%;
-  height: 100%;
-}
-
 body {
   background-color: #c0c0c0;
   text-align: center;
-  width: 100%;
-  height: 100%;
 }
 
 #content {
   display: flex;
-  flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  height: 100%;
 }
 
 #shrek {
   height: 300px;
-  display: inline-block;
-}
-
-#pork-container {
-  width: 160px;
-  display: inline-block;
+  user-select: none;
 }
 
 #pork {
-  width: 160px;
+  width: 160px; 
   border-radius: 100%;
 }
 
@@ -88,4 +72,15 @@ body {
   padding: 10px 12px 10px 12px;
 }
 
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
 
+.spinning {
+     animation: spin 0.5s ease-in-out;
+}
